vlib/v/parser/tests/const_missing_rpar_b.out
vlib/v/parser/tests/const_missing_rpar_b.vv:1:1: error: const declaration is missing closing `)`
    1 | const (
      | ~~~~~
    2 |     a = 5
    3 |     // foo
